--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,37 @@
   padding: 0;
   font-family: 'Roboto';
 }
+
+body {
+  background-color: aliceblue;
+}
+
+.board {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  gap: 30px;
+  min-height: 550px;
+  height: 100vh;
+}
+
+.score {
+  position: absolute;
+  top: 0;
+  font-family: 'Caveat';
+  font-size: 50px;
+  font-weight: 400;
+  letter-spacing: 1px;
+}
+
+.cardsBody {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.cardsBody .card {
+  width: 100px;
+  height: 100px;
+}
